[package]
name = "chat-ws-server"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.11", features = ["os-poll", "net"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"